--- a/one_way_anova.ipynb
+++ b/one_way_anova.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfWJdnnXDgSfoT34/gzZes",
+      "authorship_tag": "ABX9TyPuZPbnWXCRkRAfILd+dxTB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,12 +71,17 @@
         "# let's set a seed as well,\n",
         "# to maintain the same randomization every time we run the code\n",
         "\n",
-        "random.seed(990)"
+        "random.seed(990)\n",
+        "\n",
+        "# I'm going to supress all warnings (for the time being)\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
         "id": "af7FOnYxy1ug"
       },
-      "execution_count": 77,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -140,27 +145,10 @@
         "fake_sleep_data_df = pd.concat([dog_df, cat_df, mice_df])"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-ApVeTX5zRsz",
-        "outputId": "8539fc42-a375-4d6b-f9cb-89e24e7ef8e1"
+        "id": "-ApVeTX5zRsz"
       },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-78-f9a655ac1de2>:21: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  dog = int(dog)\n",
-            "<ipython-input-78-f9a655ac1de2>:22: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  cat = int(cat)\n",
-            "<ipython-input-78-f9a655ac1de2>:23: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  mice = int(mice)\n"
-          ]
-        }
-      ]
+      "execution_count": 92,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -184,7 +172,7 @@
         "id": "NrNpsy1f18jn",
         "outputId": "9d2c50d7-3f04-4366-a161-156d469f1470"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +503,7 @@
         "id": "T6zPWaZ0_Hcg",
         "outputId": "dbdcb490-d09b-4101-8fe8-387dc3eb0add"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -611,7 +599,7 @@
         "id": "PwLGlVc7D5y2",
         "outputId": "bf4b0eb5-8d57-43f5-dcbf-6e94cc113b92"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -651,7 +639,7 @@
         "id": "RryyGXrKJlmi",
         "outputId": "c7c65f47-1563-463f-c571-135eb452b405"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -691,7 +679,7 @@
         "id": "08g1yRstJn--",
         "outputId": "bbaa10d4-3f49-44c8-96b3-e7007d305c1e"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -740,7 +728,7 @@
         "id": "dPjSyTmwO2YQ",
         "outputId": "cd9b88ff-f999-4cd0-fa14-a29703ad9451"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +779,7 @@
         "id": "rOX4i0-D7CD6",
         "outputId": "68d50897-1c8c-4d1e-cbe4-35a50ce72dd0"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +859,7 @@
         "id": "o86vfla-VKop",
         "outputId": "d4e6ce26-505a-4c4a-8011-1040b960fea3"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
