--- a/t_tests.ipynb
+++ b/t_tests.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdTCfgiEZZxReoynFjNti5",
+      "authorship_tag": "ABX9TyMKe2hA/qxkBPqFTZ79A2cd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,24 @@
         "\n",
         "*independent sample T-tests*\n",
         "\n",
-        "\n"
+        "Let's say you're running a study and you want to find out whether *on average* tuna fish or sharks swim more miles. Your very kind and capable research team and you have carefully tagged 50 individual tuna fish and 50 individual sharks and attached GPS monitoring devices to them.\n",
+        "\n",
+        "This GPS devices tells you for each tuna fish and each shark how many miles they swam in a given day.\n",
+        "\n",
+        "Now, the question you have is: on day 1, is there a difference in the number of miles a tuna fish swam, compared to a shark?\n",
+        "\n",
+        "**Let's breakdown the data**\n",
+        "\n",
+        "We have two groups:\n",
+        "\n",
+        "  1. Tuna fish (N = 50)\n",
+        "  2. Sharks (N = 50)\n",
+        "\n",
+        "For each of these animals (tuna or shark), you also have a number that represents number of miles.\n",
+        "\n",
+        "Therefore, we are going to use a t-test to understand whether the average number of miles swam by sharks is different to the average number of miles swam by tuna.\n",
+        "\n",
+        "Let's see how that's done!"
       ],
       "metadata": {
         "id": "nw7__dcKYGXv"
